<resources>
    <string name="app_name">Lab1</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="ListView">ListView</string>
    <string name="ListViewID">ListViewID</string>
    <string name="aici_apar_detaliile_despre_produs">Aici apar detaliile despre produs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="cosul_dumneavoastra_de_cumparaturi">Cosul dumneavoastra de cumparaturi</string>
    <string name="text_filtru_intent">Text Filtru Intent</string>
    <string name="acesta_este_contul">Acesta este contul</string>
    <string name="test_dialog">Test dialog</string>
    <string name="numar_de_telefon">Numar de telefon</string>
    <string name="adresa">Adresa</string>
    <string name="cod_postal">Cod postal</string>
    <string name="salveaza">Salveaza</string>
    <string name="contul_meu">Contul meu</string>
    <string name="cos">Cos</string>
    <string name="catalog">Catalog</string>
    <string name="numemeniu">NumeMeniu</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="textul_va_fi_incarcat_in_casetutele_de_mai_sus">Textul va fi incarcat in casetutele de mai sus</string>
    <string name="incarca">Incarca</string>
    <string name="intent_filters_page">Intent Filters page.</string>
    <string name="sensoractivity">SensorActivity</string>
    <string name="textsensoractivity">textSensorActivity</string>
    <string name="longitudine">Longitudine</string>
    <string name="latitudine">Latitudine</string>
    <string name="sensor_activity">Sensor activity</string>
    <string name="coordonate">Coordonate:</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="temperatura">Temperatura:</string>
    <string name="luminozitatea">Luminozitatea</string>
    <string name="temperatura1">Temperatura1</string>
    <string name="luminozitatea1">luminozitatea1</string>
    <string name="text1">TextView</string>
    <string name="text2">TextView</string>
    <string name="gravitatie">Gravitatie</string>
    <string name="text3">TextView</string>
    <string name="text4">TextView</string>
    <string name="text5">TextView</string>
    <string name="lumina">Lumina</string>
    <string name="text7">text7</string>
    <string name="umiditate">Umiditate</string>
    <string name="text6">text6</string>
    <string name="giroscop">Giroscop</string>
    <string name="text8">text8</string>
    <string name="text9">text9</string>
    <string name="text10">text10</string>
    <string name="text11">text11</string>
    <string name="text12">text12</string>
    <string name="accelometru">Accelometru</string>
    <string name="text13">text13</string>
    <string name="text14">text14</string>
    <string name="text15">text15</string>
    <string name="cameraactivity">Camera</string>
</resources>
