<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title = "@string/numemeniu"
        android:id = "@+id/numeIdMeniu"
        android:icon = "@drawable/ic_ac_unit_black_24dp"
        app:showAsAction = "ifRoom"
        />
    <item
        android:title = "@string/catalog"
        android:id = "@+id/numeOptiunea1"
        />
    <item
        android:title = "@string/cos"
        android:id = "@+id/numeOptiunea2"
        />
    <item
        android:title = "@string/contul_meu"
        android:id = "@+id/numeOptiunea3"
        />
    <item
        android:title = "Settings"
        android:id = "@+id/settings"
        />
    <item
        android:title = "@string/sensoractivity"
        android:id = "@+id/sensoractivity"
        />
</menu>