<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/acesta_este_contul"
        app:layout_constraintBottom_toTopOf="@+id/to_save1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="61dp"
        android:onClick="alertDialogTest"
        android:text="@string/test_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_cont_details"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/to_save1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/numar_de_telefon"
        app:layout_constraintBottom_toTopOf="@+id/to_save2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/to_save2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/adresa"
        app:layout_constraintBottom_toTopOf="@+id/to_save3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_save1" />

    <EditText
        android:id="@+id/to_save3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="202dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cod_postal"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_save2" />

    <Button
        android:id="@+id/save_cont_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="257dp"
        android:layout_marginBottom="50dp"
        android:onClick="saveText"
        android:text="@string/salveaza"
        app:layout_constraintBottom_toTopOf="@+id/load_cont_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_button" />

    <TextView
        android:id="@+id/load_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="90dp"
        android:text="@string/textul_va_fi_incarcat_in_casetutele_de_mai_sus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_save3" />

    <Button
        android:id="@+id/load_cont_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="16dp"
        android:onClick="loadText"
        android:text="@string/incarca"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>